/*
 * Copyright (c) 2019, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
 *
 * WSO2 Inc. licenses this file to you under the Apache License,
 * Version 2.0 (the "License"); you may not use this file except
 * in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

syntax = "proto3";

// Package name of analytics
package org.wso2.apim.grpc.telemetry.receiver.generated;

option java_multiple_files = true;

// Report Request proto for analytics
message ReportRequest {

    // Map contains string values
    map<string, string> stringValues = 1;

    // Map contains long values
    map<string, int64> longValues = 2;

    // Map contains int values
    map<string, int32> intValues = 3;

    // Map contains boolean values
    map<string, bool> booleanValues = 4;
}

// Report Response proto for analytics
message ReportResponse {
}

// Report service
service ReportService {

    // Report service for analytics
    rpc report(ReportRequest) returns (ReportResponse);
}
